Updated challenge navigation

--- a/Navigation/Main_Project/index.html
+++ b/Navigation/Main_Project/index.html
@@ -10,9 +10,9 @@
        <nav role="navigation" aria-label="main menu">
           <ul>
             <li><a href="">Inicio</a></li>
-            <li><a href='./libro1.html'>Libro 1</a></li>
-            <li><a href=''>Libro 2</a></li>
-            <li><a href=''>Libro 3</a></li>
+            <li><a href="libro1.html">Libro 1</a></li>
+            <li><a href="libro2.html">Libro 2</a></li>
+            <li><a href="libro3.html">Libro 3</a></li>
           </ul>
        </nav>
     <h2>Bienvenido a Mi Sitio</h2>
